tests/integration/snapshots/integration__schema_snapshots__response_schema_AdminV2MigrateMetadataResponse.snap
---
source: tests/integration/schema_snapshots.rs
assertion_line: 172
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "AdminV2MigrateMetadataResponse",
  "description": "Response from admin v2 metadata migration.",
  "type": "object",
  "properties": {
    "operation": {
      "description": "Action-oriented operation summary.",
      "$ref": "#/$defs/OperationSummary"
    },
    "dry_run": {
      "description": "Whether this pass was a dry run.",
      "type": "boolean"
    },
    "report": {
      "description": "Non-destructive migration pass outcome.",
      "$ref": "#/$defs/V2MetadataMigrationReport"
    }
  },
  "required": [
    "operation",
    "dry_run",
    "report"
  ],
  "$defs": {
    "OperationSummary": {
      "description": "Shared action-oriented operation metadata.",
      "type": "object",
      "properties": {
        "status": {
          "description": "Operation status.",
          "$ref": "#/$defs/OperationStatus"
        },
        "changed": {
          "description": "Number of records changed.",
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "matched": {
          "description": "Number of records matched before access checks, when applicable.",
          "type": [
            "integer",
            "null"
          ],
          "format": "uint64",
          "minimum": 0
        },
        "denied": {
          "description": "Number of matching records denied by authorization, when applicable.",
          "type": [
            "integer",
            "null"
          ],
          "format": "uint64",
          "minimum": 0
        },
        "capped": {
          "description": "Whether more matching records remain.",
          "type": "boolean"
        },
        "next_action": {
          "description": "Recommended next action for agents.",
          "$ref": "#/$defs/NextAction"
        },
        "warnings": {
          "description": "Warnings for this operation.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/QualityWarning"
          }
        },
        "affected": {
          "description": "Affected memories or representative samples.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/AffectedMemory"
          }
        }
      },
      "required": [
        "status",
        "changed",
        "capped",
        "next_action",
        "warnings",
        "affected"
      ]
    },
    "OperationStatus": {
      "description": "Standard operation status for v2 mutation and admin tools.",
      "oneOf": [
        {
          "description": "The operation changed persistent state.",
          "type": "string",
          "const": "applied"
        },
        {
          "description": "The operation changed some, but not all, matching items.",
          "type": "string",
          "const": "partial"
        },
        {
          "description": "The operation only previewed changes.",
          "type": "string",
          "const": "preview"
        },
        {
          "description": "Work was accepted for asynchronous processing.",
          "type": "string",
          "const": "queued"
        },
        {
          "description": "The operation was valid but made no changes.",
          "type": "string",
          "const": "no_op"
        },
        {
          "description": "The principal lacked permission.",
          "type": "string",
          "const": "denied"
        },
        {
          "description": "The target was not found.",
          "type": "string",
          "const": "not_found"
        }
      ]
    },
    "NextAction": {
      "description": "Recommended follow-up action for agents after a tool call.",
      "oneOf": [
        {
          "description": "No follow-up is needed.",
          "type": "string",
          "const": "none"
        },
        {
          "description": "Read the returned or affected memory.",
          "type": "string",
          "const": "read"
        },
        {
          "description": "Review duplicate candidates before relying on the write.",
          "type": "string",
          "const": "review_duplicates"
        },
        {
          "description": "Classify unresolved scope later.",
          "type": "string",
          "const": "classify_scope"
        },
        {
          "description": "Re-run the same maintenance operation to continue a capped batch.",
          "type": "string",
          "const": "continue"
        },
        {
          "description": "Inspect warnings before proceeding.",
          "type": "string",
          "const": "review_warnings"
        }
      ]
    },
    "QualityWarning": {
      "description": "A quality or classification warning returned by v2 write tools.",
      "type": "object",
      "properties": {
        "code": {
          "description": "Stable warning code.",
          "type": "string"
        },
        "severity": {
          "description": "Severity for agent triage.",
          "$ref": "#/$defs/QualityWarningSeverity"
        },
        "field": {
          "description": "Optional request field path associated with this warning.",
          "type": [
            "string",
            "null"
          ]
        },
        "message": {
          "description": "Human-readable warning message.",
          "type": "string"
        },
        "suggested_fix": {
          "description": "Optional suggested agent action.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "code",
        "severity",
        "message"
      ]
    },
    "QualityWarningSeverity": {
      "description": "Severity for v2 quality warnings.",
      "oneOf": [
        {
          "description": "Informational hint; the operation is usually usable.",
          "type": "string",
          "const": "info"
        },
        {
          "description": "Warning worth reviewing before relying on the result.",
          "type": "string",
          "const": "warning"
        },
        {
          "description": "Follow-up action is required for best results.",
          "type": "string",
          "const": "action_required"
        }
      ]
    },
    "AffectedMemory": {
      "description": "Compact affected item for action-oriented operation responses.",
      "type": "object",
      "properties": {
        "id": {
          "description": "Affected memory ID.",
          "$ref": "#/$defs/MemoryId"
        },
        "card": {
          "description": "Compact card when the memory still exists and is readable.",
          "anyOf": [
            {
              "$ref": "#/$defs/RecallCard"
            },
            {
              "type": "null"
            }
          ]
        }
      },
      "required": [
        "id"
      ]
    },
    "MemoryId": {
      "description": "A ULID-formatted unique memory identifier",
      "type": "string"
    },
    "RecallCard": {
      "description": "Compact v2 result card. Full content is available through `read`.",
      "type": "object",
      "properties": {
        "id": {
          "description": "Memory ID.",
          "$ref": "#/$defs/MemoryId"
        },
        "summary_or_excerpt": {
          "description": "Caller-supplied summary when available, otherwise a deterministic excerpt.",
          "type": "string"
        },
        "scope": {
          "description": "Scope label/key.",
          "type": "string"
        },
        "agent_label": {
          "description": "Agent provenance label.",
          "type": [
            "string",
            "null"
          ]
        },
        "created_at": {
          "description": "Creation timestamp.",
          "type": "string"
        },
        "updated_at": {
          "description": "Last-update timestamp.",
          "type": "string"
        },
        "tags": {
          "description": "Tags associated with the memory.",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "entities": {
          "description": "Typed entities attached to the memory.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/Entity"
          }
        },
        "match": {
          "description": "Agent-facing match assessment.",
          "$ref": "#/$defs/MatchAssessment"
        },
        "diagnostics": {
          "description": "Debugging diagnostics for retrieval and ranking.",
          "$ref": "#/$defs/MatchDiagnostics"
        }
      },
      "required": [
        "id",
        "summary_or_excerpt",
        "scope",
        "created_at",
        "updated_at",
        "tags",
        "match",
        "diagnostics"
      ]
    },
    "Entity": {
      "description": "A caller-provided typed entity attached to a memory for entity-based retrieval.",
      "type": "object",
      "properties": {
        "name": {
          "description": "The entity name (e.g., \"Alice\", \"example-agent\", \"RFC 9110\").",
          "type": "string"
        },
        "type": {
          "description": "The entity type (e.g., \"person\", \"project\", \"document\").",
          "$ref": "#/$defs/EntityType"
        }
      },
      "required": [
        "name",
        "type"
      ]
    },
    "EntityType": {
      "description": "A validated entity type identifier",
      "type": "string"
    },
    "MatchAssessment": {
      "description": "Agent-facing match assessment for a compact v2 card.",
      "type": "object",
      "properties": {
        "quality": {
          "description": "Match quality label.",
          "$ref": "#/$defs/MatchQuality"
        },
        "action": {
          "description": "Recommended action for agents.",
          "$ref": "#/$defs/MatchAction"
        },
        "score": {
          "description": "Final query relevance on a 0.0-1.0 scale.",
          "type": "number",
          "format": "double"
        },
        "score_basis": {
          "description": "Ranking signal used to compute `score`.",
          "$ref": "#/$defs/MatchScoreBasis"
        }
      },
      "required": [
        "quality",
        "action",
        "score",
        "score_basis"
      ]
    },
    "MatchQuality": {
      "description": "Agent-facing match quality label.",
      "oneOf": [
        {
          "description": "Strong match.",
          "type": "string",
          "const": "strong"
        },
        {
          "description": "Usable but not definitive.",
          "type": "string",
          "const": "possible"
        },
        {
          "description": "Weak match suppressed by default.",
          "type": "string",
          "const": "weak"
        }
      ]
    },
    "MatchAction": {
      "description": "Recommended agent action for a matched card.",
      "oneOf": [
        {
          "description": "Read the full memory.",
          "type": "string",
          "const": "read"
        },
        {
          "description": "Consider reading if more context is needed.",
          "type": "string",
          "const": "consider"
        },
        {
          "description": "Ignore unless explicitly debugging retrieval.",
          "type": "string",
          "const": "ignore"
        }
      ]
    },
    "MatchScoreBasis": {
      "description": "Basis used to compute the agent-facing match score.",
      "oneOf": [
        {
          "description": "Blended cross-encoder reranker score and first-stage retrieval score.",
          "type": "string",
          "const": "reranker_blend"
        },
        {
          "description": "First-stage retrieval score only.",
          "type": "string",
          "const": "retrieval"
        },
        {
          "description": "Low confidence association score for expanded/contextual candidates.",
          "type": "string",
          "const": "association"
        },
        {
          "description": "No ranking signal was available.",
          "type": "string",
          "const": "unavailable"
        }
      ]
    },
    "MatchDiagnostics": {
      "description": "Ranking diagnostics for a compact v2 card.",
      "type": "object",
      "properties": {
        "retrieval_score": {
          "description": "First-stage retrieval score.",
          "type": [
            "number",
            "null"
          ],
          "format": "double"
        },
        "reranker_score": {
          "description": "Reranker score when available.",
          "type": [
            "number",
            "null"
          ],
          "format": "double"
        },
        "reranker_blend_weight": {
          "description": "Reranker blend weight used when `score_basis` is `reranker_blend`.",
          "type": [
            "number",
            "null"
          ],
          "format": "double"
        },
        "vector_distance": {
          "description": "L2 vector distance when available.",
          "type": [
            "number",
            "null"
          ],
          "format": "double"
        },
        "ranking_score": {
          "description": "Internal ranking score combining relevance, importance, freshness, activity, and confidence.",
          "type": [
            "number",
            "null"
          ],
          "format": "double"
        }
      }
    },
    "V2MetadataMigrationReport": {
      "description": "Outcome from a non-destructive v2 metadata migration pass.",
      "type": "object",
      "properties": {
        "candidate_count": {
          "description": "Existing memories missing a v2 metadata row before this pass.",
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "skipped_existing": {
          "description": "Existing memories that already had v2 metadata and were skipped.",
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "migrated": {
          "description": "Metadata rows inserted by this pass. Dry runs always report zero.",
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "unresolved_scope": {
          "description": "Candidate memories assigned to the unresolved inbox scope.",
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "missing_summary": {
          "description": "Candidate memories still missing caller-supplied summaries.",
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "oversized": {
          "description": "Candidate memories larger than the v2 large-content warning threshold.",
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        },
        "code_derived": {
          "description": "Candidate memories that look like code dumps or code-derived content.",
          "type": "integer",
          "format": "uint64",
          "minimum": 0
        }
      },
      "required": [
        "candidate_count",
        "skipped_existing",
        "migrated",
        "unresolved_scope",
        "missing_summary",
        "oversized",
        "code_derived"
      ]
    }
  }
}
